--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
-
+<base href="/">
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <my-app>oryginal index</my-app>
   </body>
 </html>
